add workspaces to the ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -151,6 +151,15 @@ xcuserdata/
 #
 #
 
+# Xcode
+*.pbxuser
+*.mode1v3
+*.mode2v3
+*.perspectivev3
+*.xcuserstate
+project.xcworkspace/
+xcuserdata/
+
 ####
 # Xcode 4 - Deprecated classes
 #
